// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage renders dashboard for authenticated session 1`] = `
<DocumentFragment>
  <header>
    <a
      class="main-container main-container--content flex focus:outline-none focus:ring-2 focus:ring-red-600"
      href="/"
    >
      <picture>
        <source
          media="(min-width: 640px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
        />
        <source
          media="(min-width: 480px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
        />
        <img
          alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
          src="/icons/app/icons8-dungeons-and-dragons-64.png"
        />
      </picture>
      <div
        class="font-serif text-2xl sm:text-3xl md:text-4xl self-center antialiased"
      >
        [Translation for https://example.com/global/translations.ttl#appName does not exist]
      </div>
    </a>
  </header>
  <main
    class="main-container main-container--content my-1"
  >
    <div
      class="content leading-normal max-w-prose mx-auto"
    >
      <h1>
        You are logged in!
      </h1>
      <p>
        This part is in development, more will come.
      </p>
      <a
        href="/about"
      >
        Learn more about the project
      </a>
    </div>
    <div
      data-testid="loading"
    >
      Loading...
    </div>
  </main>
  <footer
    class="main-container main-container--content md:flex mt-2"
  >
    <div
      class="md:flex-grow pb-2"
    >
      <a
        class="link mr-1 p-1"
        href="/about"
      >
        [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
      </a>
      <a
        class="link mr-1 p-1"
        href="/faq"
      >
        [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
      </a>
    </div>
    <div
      class="pb-2"
    />
  </footer>
</DocumentFragment>
`;

exports[`HomePage renders splash page for unauthenticated session 1`] = `
<DocumentFragment>
  <main
    class="bg-black"
  >
    <section
      class="hero"
    >
      <div
        class="h-screen text-white flex flex-col justify-center items-center leading-normal px-4 bg-gradient-to-t from-black relative text-center"
      >
        <picture>
          <source
            media="(min-width: 640px)"
            srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
          />
          <source
            media="(min-width: 480px)"
            srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
          />
          <img
            alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
            src="/icons/app/icons8-dungeons-and-dragons-64.png"
          />
        </picture>
        <h1
          class="text-3xl my-1 font-serif"
        >
          [Translation for https://example.com/global/translations.ttl#appName does not exist]
        </h1>
        <p
          class="my-1 max-w-xl"
        >
          [Translation for https://example.com/global/translations.ttl#appPitch does not exist]
        </p>
        <a
          class="link my-1 max-w-prose"
          href="/about"
        >
          [Translation for https://example.com/global/translations.ttl#learnMore does not exist]
        </a>
        <p
          class="text-2xl my-1"
        >
          [Translation for https://example.com/global/translations.ttl#workInProgress does not exist]
        </p>
        <p
          class="text-xs text-gray-600 absolute bottom-1 right-2"
        >
          Photo by 
          <a
            class="link link--subtle"
            href="https://unsplash.com/@steve_j?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
          >
            Steve Johnson
          </a>
           on 
          <a
            class="link link--subtle"
            href="https://unsplash.com/s/photos/pen-and-paper?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
          >
            Unsplash
          </a>
        </p>
      </div>
    </section>
    <section
      class="bg-black text-white text-center my-16"
    >
      <h2
        class="text-2xl font-serif px-8"
      >
        [Translation for https://example.com/global/translations.ttl#logInPitch does not exist]
      </h2>
      <ul
        class="flex overflow-x-auto overscroll-x-contain md:justify-center px-2 my-8"
      >
        <li
          class="p-2 flex"
        >
          <button
            class="p-4 bg-purple-100 rounded-xl self-center text-black focus:outline-none focus:ring-2 focus:ring-purple-600 hover:bg-purple-300 hover:shadow-inner"
            data-testid="login-button"
            type="button"
          >
            <img
              alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
              class="mx-auto"
              src="/logos/inrupt-ps-logo.png"
              style="max-height: 175px; max-width: 200px;"
            />
            <span>
              Inrupt Pod Spaces
            </span>
          </button>
        </li>
        <li
          class="p-2 flex"
        >
          <button
            class="p-4 bg-purple-100 rounded-xl self-center text-black focus:outline-none focus:ring-2 focus:ring-purple-600 hover:bg-purple-300 hover:shadow-inner"
            data-testid="login-button"
            type="button"
          >
            <img
              alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
              class="mx-auto"
              src="/logos/solid-emblem.svg"
              style="max-height: 175px; max-width: 200px;"
            />
            <span>
              solidcommunity.net
            </span>
          </button>
        </li>
        <li
          class="p-2 flex"
        >
          <button
            class="p-4 bg-purple-100 rounded-xl self-center text-black focus:outline-none focus:ring-2 focus:ring-purple-600 hover:bg-purple-300 hover:shadow-inner"
            data-testid="login-button"
            type="button"
          >
            <img
              alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
              class="mx-auto"
              src="/logos/solid-emblem.svg"
              style="max-height: 175px; max-width: 200px;"
            />
            <span>
              inrupt.net
            </span>
          </button>
        </li>
        <li
          class="p-2 flex"
          style="max-width: 200px;"
        >
          <a
            class="p-4 bg-purple-100 rounded-xl self-center text-black focus:outline-none focus:ring-2 focus:ring-purple-600 hover:bg-purple-300 hover:shadow-inner"
            href="/login?idp"
            style="min-height: 175px;"
          >
            <img
              alt="[Translation for https://example.com/global/translations.ttl#solidLogo does not exist]"
              class="mx-auto"
              src="/logos/solid-emblem.svg"
              style="max-height: 175px; max-width: 200px;"
            />
            [Translation for https://example.com/global/translations.ttl#provideIdP does not exist]
          </a>
        </li>
      </ul>
    </section>
    <footer
      class="main-container main-container--content md:flex mt-2"
    >
      <div
        class="md:flex-grow pb-2"
      >
        <a
          class="link mr-1 p-1"
          href="/about"
        >
          [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
        </a>
        <a
          class="link mr-1 p-1"
          href="/faq"
        >
          [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
        </a>
      </div>
      <div
        class="pb-2"
      />
    </footer>
  </main>
</DocumentFragment>
`;
